fix: Add fix for share onelink popup overflow and answerQuestion API

--- a/src/components/Investor/InvestorHome/Components/Questionnaire/Questionnaire.scss
+++ b/src/components/Investor/InvestorHome/Components/Questionnaire/Questionnaire.scss
@@ -28,6 +28,32 @@
     }
   }
 
+  .option_button {
+    cursor: pointer;
+    outline: none;
+    border: 1px solid rgba(96, 96, 96, 0.19);
+    color: rgba(121, 121, 121, 1);
+    background-color: transparent;
+    box-shadow: 2px 2px 20px 0px rgba(0, 0, 0, 0.15);
+    font-size: 1rem;
+    line-height: normal;
+
+    padding: 0.75em 1.5em;
+    border-radius: 10rem;
+
+    &:hover {
+      border: 1px solid rgba(253, 89, 1, 1);
+      background-color: rgba(253, 89, 1, 1);
+      color: white;
+    }
+
+    &.selected {
+      border: 1px solid rgba(253, 89, 1, 1);
+      background-color: rgba(253, 89, 1, 1);
+      color: white;
+    }
+  }
+
   .user_input_container {
     margin-top: 5em;
   }
